plugins {
	id 'org.springframework.boot' version '2.4.10'
    id 'com.google.cloud.tools.jib' version '1.6.1'
	id 'java'
    id 'groovy'
    id 'jacoco'
    id 'org.sonarqube' version '2.7'
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'jacoco'

group = 'com.test.demo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}


jib {
    from {
        image = 'openjdk:8-jre'
    }
    to {
        
    }
    container {
        jvmFlags = ['-server', '-XX:+UseConcMarkSweepGC', '-XX:+CMSParallelRemarkEnabled', '-XX:+ScavengeBeforeFullGC', '-XX:+CMSScavengeBeforeRemark', '-XX:MinHeapFreeRatio=20', '-XX:MaxHeapFreeRatio=40', '-XX:GCTimeRatio=4', '-XX:AdaptiveSizePolicyWeight=90', '-Xms40M', '-Xmx512M']
        ports = ['8080']
        creationTime = 'USE_CURRENT_TIMESTAMP'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mariadb.jdbc:mariadb-java-client'

	implementation 'com.antkorwin:xsync:1.1'
    
    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'
}

test {
	useJUnitPlatform()
}
